# medium_lib

./: README.md  lolo.c  lolo.h  lolo.lo  test_lolo.c
.deps/: lolo.Plo  lolo.Po  shared_app-test_lolo.Po  static_app-test_lolo.Po  test_lolo.Po
autotools/: Makefile.am
autotools/app_shared/: Makefile  Makefile.am  Makefile.in  build.sh  config.status  configure.ac
autotools/app_shared/autom4te.cache/: requests  traces.0  traces.1
autotools/app_static/: Makefile  Makefile.am  Makefile.in  build.sh  config.h  config.status  configure
autotools/app_static/autom4te.cache/: output.0  requests
autotools/lib_shared/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  liblolo.la
autotools/lib_shared/.libs/: liblolo.la  liblolo.lai  liblolo.so.0.0.0
autotools/lib_shared/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
autotools/lib_static/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac
autotools/lib_static/autom4te.cache/: output.0  requests  traces.0  traces.1
cmake/: CMakeLists.txt
cmake/app_shared/: CMakeLists.txt
cmake/lib_shared/: CMakeLists.txt
cmake/lib_static/: CMakeLists.txt
shared/: build.sh  shared_app
static/: build.sh  static_app
